# OmniSync

./: .env.example  .gitignore  LICENSE  README-CREDENTIALS.md  README.md  SECURITY.md  config.example.toml  install.bat  omnisync.spec  pyproject.toml  requirements.txt  run.bat  setup.bat
docs/: ARCHITECTURE.md  AUDIT_TECHNIQUE_OMNIVOX.md  GOOGLE_CALENDAR.md  INSTALLATION.md  LANDING_CONTEXT.md  OMNIVOX_AUDIT.md  PROJECT_STATE.md  PROMPT_CARTOGRAPHIE_OMNIVOX.md  PROMPT_CARTOGRAPHIE_OMNIVOX_PHASE2.md  ROADMAP.md  SESSION_HANDOFF.md  TODO.md  TROUBLESHOOTING.md  UTILISATEUR.md
scripts/: build.ps1  build_memory.py  setup_scheduler.ps1
src/omnisync/: cli.py  config.py  diagnostics.py  notify.py  paths.py  scheduler.py  sync.py  ui.py
src/omnisync/calendar/: __init__.py  google.py
src/omnisync/scraper/: __init__.py  adapter.py  models.py  moodle_engine.py  omnivox_auth.py  omnivox_browser.py  omnivox_engine.py  omnivox_helpers.py  omnivox_loader.py  omnivox_models.py  scrape_calendrier.py  scrape_horaire.py  scrape_lea.py  scrape_mio.py  scrape_notes.py  scrape_travaux.py  session_guard.py  snapshots.py  validator.py
src/omnisync/storage/: __init__.py  db.py
tests/: test_adapter.py  test_config.py  test_models.py
