[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnisync"
version = "0.1.0"
description = "Synchronise Omnivox vers Google Calendar localement."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OmniSync contributors" }]
dependencies = [
  "playwright>=1.40.0",
  "rebrowser-playwright>=0.1.0",
  "python-dotenv>=1.0.0",
  "google-auth>=2.23.0",
  "google-auth-oauthlib>=1.1.0",
  "google-auth-httplib2>=0.1.1",
  "google-api-python-client>=2.100.0",
  "keyring>=24.0.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "tzdata>=2024.1",
]

[project.scripts]
omnisync = "omnisync.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
